--- a/style.css
+++ b/style.css
@@ -8,3 +8,12 @@
   display: flex;
   align-items: center;
 }
+
+main {
+  display: flex;
+}
+
+#evaluation-form {
+  display: flex;
+  width: 675px;
+}
