Tentativa do requisito 12

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   justify-content: space-between;
 }
 
+.trybewarts-header-logo {
+    max-height: 100px;
+}
+
 .trybewarts-login {
   display: flex;
   align-items: center;
@@ -16,30 +20,48 @@ main {
 #evaluation-form {
   display: flex;
   flex-flow: column wrap;
-  align-items: center;
+  /* align-items: center; */
   justify-content: space-between;
   width: 675px;
+  min-width: 675px;
+  /* max-width: 675px; */
   height: 150px;
+  /* border: 1px black solid; */
 }
 
 #input-name {
-  width: 50%;
-  height: 50%;
-  max-height: 50px;
+  width: 45%;
+  /* height: 50%; */
+  min-height: 50px;
 }
 
 #input-lastname {
-  width: 50%;
-  height: 50%;
-  max-height: 50px;
+  width: 45%;
+  /* height: 50%; */
+  min-height: 50px;
 }
 
 #input-email {
-  width: 50%;
-  height: 50%;
-  max-height: 50px;
+  width: 45%;
+  /* height: 50%; */
+  min-height: 50px;
 }
 
 #trybewarts-forms-logo {
   height: 500px;
 }
+
+#house {
+    display: flex;
+    height: 50px;
+}
+
+#label-family {
+    display: flex;
+    flex-flow: column wrap;
+}
+
+/* .radio-button label {
+  display: inline-block;
+  width: 100%;
+} */
