--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 #trybewarts-header-title {
-  font-family: 'Viaoda Libre', cursive;
+  font-family: Viaoda Libre, cursive;
   font-size: 60px;
 }
 
